[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/5_Plate.png" type="Texture" id=1]
[ext_resource path="res://Themes/Main.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Input.gd" type="Script" id=3]

[node name="Root" type="Node2D"]
script = ExtResource( 3 )

[node name="Plate" type="Sprite" parent="."]
position = Vector2( 250, 300 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="InputUI" type="Node2D" parent="."]
position = Vector2( 600, 150 )

[node name="Label" type="Label" parent="InputUI"]
margin_top = -50.0
margin_right = 125.0
margin_bottom = -36.0
rect_scale = Vector2( 2.5, 2.5 )
theme = ExtResource( 2 )
align = 2

[node name="InputButtons" type="GridContainer" parent="InputUI"]
margin_right = 308.0
margin_bottom = 412.0
rect_min_size = Vector2( 300, 300 )
theme = ExtResource( 2 )
columns = 3

[node name="Button1" type="Button" parent="InputUI/InputButtons"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "1"

[node name="Button2" type="Button" parent="InputUI/InputButtons"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "2"

[node name="Button3" type="Button" parent="InputUI/InputButtons"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
text = "3"

[node name="Button4" type="Button" parent="InputUI/InputButtons"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
text = "4"

[node name="Button5" type="Button" parent="InputUI/InputButtons"]
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
text = "5"

[node name="Button6" type="Button" parent="InputUI/InputButtons"]
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
text = "6"

[node name="Button7" type="Button" parent="InputUI/InputButtons"]
margin_top = 208.0
margin_right = 100.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
text = "7"

[node name="Button8" type="Button" parent="InputUI/InputButtons"]
margin_left = 104.0
margin_top = 208.0
margin_right = 204.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
text = "8"

[node name="Button9" type="Button" parent="InputUI/InputButtons"]
margin_left = 208.0
margin_top = 208.0
margin_right = 308.0
margin_bottom = 308.0
rect_min_size = Vector2( 100, 100 )
text = "9"

[node name="BackButton" type="Button" parent="InputUI/InputButtons"]
margin_top = 312.0
margin_right = 100.0
margin_bottom = 412.0
rect_min_size = Vector2( 100, 100 )
text = "Back"

[node name="Button0" type="Button" parent="InputUI/InputButtons"]
margin_left = 104.0
margin_top = 312.0
margin_right = 204.0
margin_bottom = 412.0
rect_min_size = Vector2( 100, 100 )
text = "0"

[node name="EnterButton" type="Button" parent="InputUI/InputButtons"]
margin_left = 208.0
margin_top = 312.0
margin_right = 308.0
margin_bottom = 412.0
rect_min_size = Vector2( 100, 100 )
text = "Enter"

[connection signal="button_down" from="InputUI/InputButtons/Button1" to="." method="_on_Button_button_down" binds= [ "Button1" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button2" to="." method="_on_Button_button_down" binds= [ "Button2" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button3" to="." method="_on_Button_button_down" binds= [ "Button3" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button4" to="." method="_on_Button_button_down" binds= [ "Button4" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button5" to="." method="_on_Button_button_down" binds= [ "Button5" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button6" to="." method="_on_Button_button_down" binds= [ "Button6" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button7" to="." method="_on_Button_button_down" binds= [ "Button7" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button8" to="." method="_on_Button_button_down" binds= [ "Button8" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button9" to="." method="_on_Button_button_down" binds= [ "Button9" ]]
[connection signal="button_down" from="InputUI/InputButtons/BackButton" to="." method="_on_Button_button_down" binds= [ "BackButton" ]]
[connection signal="button_down" from="InputUI/InputButtons/Button0" to="." method="_on_Button_button_down" binds= [ "Button0" ]]
[connection signal="button_down" from="InputUI/InputButtons/EnterButton" to="." method="_on_Button_button_down" binds= [ "EnterButton" ]]
